[package]
name        = "imgup"
description = "Upload images via APIs"
version     = "0.0.0"
edition     = "2024"
license     = "MIT"
repository  = "https://github.com/deadnews/imgup"
keywords    = ["image", "upload", "cli"]

[dependencies]
# CLI & config
clap    = { version = "4.6", features = ["derive"] }
dirs    = { version = "6.0" }
dotenvy = { version = "0.15" }

# Async & HTTP
futures = { version = "0.3", default-features = false, features = ["alloc"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "multipart", "cookies", "form"] }
tokio   = { version = "1.52", features = ["fs", "macros", "rt-multi-thread"] }

# Serialization
base64     = { version = "0.22" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Image processing
fontdue = { version = "0.9" }
image   = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }

# System integration
arboard     = { version = "3.6", default-features = false, features = ["wayland-data-control"] }
notify-rust = { version = "4.17" }

# Error handling & logging
anyhow             = { version = "1.0" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "std"] }

[dev-dependencies]
wiremock = { version = "0.6" }

[profile.release]
codegen-units = 1
lto           = true
strip         = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "warn"
